# trellminal

./: Cargo.toml  README.md
res/www/: auth.html  auth_success.html
src/: database.rs  input.rs  main.rs
src/api/: boards.rs  card.rs  members.rs  mod.rs  organizations.rs
src/database/: account.rs  mod.rs
src/input/: http_server.rs  mod.rs
src/models/: board.rs  card.rs  label.rs  list.rs  mod.rs  organization.rs  user.rs
src/router/: mod.rs  page.rs  routes.rs  with_params.rs
src/state/: first_look.rs  mod.rs
src/ui/: authenticate.rs  context.rs  first_load.rs  header.rs  logo.rs  main_layout.rs  mod.rs  root.rs  router.rs
src/ui/misc/: layout.rs  loading.rs  mod.rs  status_bar.rs
src/ui/pages/: authenticate.rs  board.rs  boards.rs  browser_authenticate.rs  first_load.rs  home.rs  manual_authenticate.rs  mod.rs  not_found.rs  token_expired.rs  workspaces.rs
