[package]
name = "trellminal"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
const_format = "0.2.32"
crossterm = "0.27.0"
reqwest = "0.11.22"
serde = { version = "1.0.190", features = ["derive"] }
tiny_http = "0.12.0"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.6"
tui = "0.19.0"
