[package]
name = "trellminal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
async-trait = "0.1.74"
const_format = "0.2.32"
crossterm = "0.27.0"
home = "0.5.5"
once_cell = "1.18.0"
qrcode = "0.12.0"
regex = "1.10.2"
reqwest = "0.11.22"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.6"
tui = "0.19.0"
tui-textarea = { version = "0.3.1", features = ["tuirs-crossterm"], default-features = false }
webbrowser = "0.8.12"
